--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@ body {
 }
 
 #clip-attachment {
-	position: absolute;
-	right: 0;
-	top: 0;
+	position: fixed;
 	transition: 350ms ease-in-out;
 	font-size: 0;
 }
